Release notes for OpenLava versions

3.3.3
======

-- Implement bsub -Jd to support specifying job description to jobs.
-- Implement tech preview of lsb.resources.
-- Implement the bresource command and the lsb_getlimits() API.
-- Fix scheduler bug in which the priority tree was not sorted
   after each job was dispatched.
-- Do not perform bulk slot allocation in the fairshare scheduler
   but distribute slots from higher to low priority jobs.
-- Implement periodic decay of used slots in the fairshare tree.
-- Implement a parameter HIST_MINUTES in lsb.params to control
   the time at which the decay of used slots is performed.
-- Modify the bparams command to display the HIST_MINUTES in its
   long output format.
-- The fairshare layer will log detail informations if the logclass
   in lsf.conf is either define as LC_FAIRSHARE or LC_FAIR.
-- Fix the Makefile.am to install bgmod.1 and bjdep.1 man pages.
-- Fix two memory leak in bsub -Jd implementation.
-- Introduce the lsb.resources file.
-- Implement the limit of the number of jobs per project using the
   lsb.resources file.
-- NIOS_RWAIT_SELECT must be set to y or Y in order for nios to wait
   on select to detect that a task has finished.
-- Add template lsb.resources.in.
-- Add man5 lsb.resources.5.
-- Add man1 bresources.1.
-- Implement xdrsize_ResLimitInfoReply() to compute xdr size.
-- Remove typedef of resLimitConf_t, resLimit_t, limitRes_t,
   limitConsumer_t as types are not atomic.
-- Change style declaration, e.g., char* x should be char *x.
-- Replace fname[] with gcc macro __func__.
-- Support specifying job description to job arrays with bsub -Jd.
-- Fix lsb.resources to support Unix user names that are not configured in lsb.users.
-- Implement bresources command to display current resource usage.
-- Implement project account recovery after mbd restart.
-- Add BATCH_RESLIMIT_INFO into forkOnRequest() to fork a child for this operation.