@@ -153,6 +153,7 @@ static int init_ownership_scheduler(void);
 static bool_t is_fairplugin_ok(void);
 static bool_t is_preemptplugin_ok(void);
 static bool_t is_ownplugin_ok(void);
+static void add_host_dedicated_res(struct hData *, struct hostInfo *);
 
 int
 minit(int mbdInitFlags)
@@ -476,6 +477,8 @@ initHData(struct hData *hData)
     hData->pxySJL = NULL;
     hData->pxyRsvJL = NULL;
     hData->leftRusageMem = INFINIT_LOAD;
+    hData->dres_tab = calloc(1, sizeof(hTab));
+    h_initTab_(hData->dres_tab, 11);
 
     return hData;
 }
@@ -832,6 +835,7 @@ addHost(struct hostInfo *lsf,
         hPtr->maxTmp    = lsf->maxTmp;
         hPtr->nDisks    = lsf->nDisks;
         hPtr->resBitMaps  = getResMaps(lsf->nRes, lsf->resources);
+        add_host_dedicated_res(hPtr, lsf);
 
         /* Fill up the hostent structure that is not used
          * anywhere anyway...
@@ -4055,4 +4059,34 @@ is_ownplugin_ok(void)
     }
 
     return false;
+}
+
+/* add_host_dedicated_res()
+ */
+static void
+add_host_dedicated_res(struct hData *hPtr, struct hostInfo *lsf)
+{
+    int cc;
+    hEnt *ent;
+
+    if (! daemonParams[MBD_DEDICATED_RESOURCES].paramValue)
+        return;
+
+    for (cc = 0; cc < lsf->nRes; cc++) {
+        /* This resource giving us from openlava base
+         * for this host, is also configured as dedicated
+         * resources in lsf.conf. Remember if in this host.
+         */
+        if (! (ent = h_getEnt_(d_res_tab, lsf->resources[cc])))
+            continue;
+
+        if (logclass & LC_TRACE) {
+            ls_syslog(LOG_INFO, "\
+%s: resource %s is dedicated on host %s", __func__, lsf->resources[cc],
+                      hPtr->host);
+        }
+
+        ent = h_addEnt_(hPtr->dres_tab, strdup(lsf->resources[cc]), NULL);
+        ent->hData = strdup(lsf->resources[cc]);
+    }
 }
